2008-05-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/XYPlot.java
    (calculateAxisSpace): Calculate space for range axes first, adjust the
    plotArea then calculate the space for the domain axes.

2008-05-14  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYStepAreaRenderer.java
    (drawItem): Use addEntity().

2008-05-14  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (addEntity): If area is null, take into account the plot orientation for 
    the generated hotspot,
    * source/org/jfree/chart/renderer/xy/XYStepRenderer.java
    (drawItem): Use addEntity().

2008-05-13  David Gilbert  <david.gilbert@object-refinery.com>
    
    Bugs 1962467 and 1962472:
    * source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
    (drawItem): Use hotspot that includes high and low values, and use
    addEntity() to add the chart entity.

2008-05-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/category/SlidingCategoryDataset.java: New class,
    * source/org/jfree/data/gantt/SlidingGanttCategoryDatsaet.java: Likewise,
    * tests/org/jfree/data/category/SlidingCategoryDatasetTests.java: 
    New tests,
    * tests/org/jfree/data/gantt/SlidingGanttCategoryDatasetTests.java: 
    Likewise.

2008-05-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/gantt/TaskSeries.java
    (clone): New method override,
    * source/org/jfree/data/gantt/TaskSeriesCollection.java
    (clone): Likewise.

2008-05-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/EmptyBlock.java
    (arrange): Use constraint.

2008-05-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/category/DefaultCategoryDataset.java:
    Implemented PublicCloneable.
