@@ -1,5 +1,10 @@
 2008-05-22  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/statistics/HistogramDataset.java
+    (clone): Reimplemented.
+
+2008-05-22  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/plot/XYPlot.java
     (calculateAxisSpace): Calculate space for range axes first, adjust the
     plotArea then calculate the space for the domain axes.
